Change controller name and update client
